--- a/.github/workflows/update-tags.yml
+++ b/.github/workflows/update-tags.yml
@@ -1,10 +1,10 @@
 name: Update Tags
 
 on:
-  workflow_dispatch:
-  # Run at midnight every day
-  # schedule:
-  # - cron: '0 0 * * *'
+  # workflow_dispatch:
+  Run at midnight every day
+  schedule:
+  - cron: '0 0 * * *'
 
 jobs:
   update:
@@ -13,5 +13,7 @@ jobs:
     steps:
     - name: checkout
       uses: actions/checkout@v3
-    - name: Setup tmate session
-      uses: mxschmitt/action-tmate@v3
+    # - name: Setup tmate session
+    #   uses: mxschmitt/action-tmate@v3
+    - name: task
+      run: ./run
