--- a/.github/workflows/update-tags.yml
+++ b/.github/workflows/update-tags.yml
@@ -1,7 +1,7 @@
 name: Update Tags
 
 on:
-  # workflow_dispatch:
+  workflow_dispatch:
   # Run at midnight every day
   schedule:
   - cron: '0 0 * * *'
